<resources>
    <string name="app_name">VIDE</string>
    <string name="nombre">Nombre:</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="dni">DNI:</string>
    <string name="finalizar">Finalizar</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="login">Login</string>
    <string name="dniLogin">DNI:</string>
    <string name="contrase_aLogin">Contraseña</string>
    <string name="id_usuario" translatable="false">E-mail</string>
    <string name="e_mail">E-mail</string>
    <string name="modo_invitado">Modo Invitado</string>
    <string name="id_teatroTitulo">TEATRO</string>
    <string name="nombreSeleccionado">Nombre Seleccionado</string>
    <string name="textFecha"> Fecha:</string>
    <string name="textHora"> Hora:</string>
    <string name="btnContinuar">Continuar</string>
    <string name="editTextAno">yyyy</string>
    <string name="textViewBarra">/</string>
    <string name="editTextMes">MM</string>
    <string name="editTextDia">dd</string>
    <string name="txteventos">Lugar</string>
    <string name="lbl_fecha_y_hora">Fecha y Hora</string>
    <string name="lblteatro">Teatro</string>
    <string name="lblCines">Cine</string>
    <string name="lblDeportes">Deporte</string>
    <string name="reg_strate">Regístrarse</string>
    <string name="lbl_concierto">Concierto</string>
    <string name="lbl_categorias">Categorias</string>
    <string name="lbl_nombre_usuario">Nombre Usuario</string>
    <string name="vi">VI</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="lbl_precio_total">Precio Total:</string>
    <string name="lbl_Titulo_Tickets">Tickets</string>
    <string name="lbl_clique_sobre_los_tickets_que_quiera_quitar">Clique sobre los tickets que quiera quitar</string>
    <string name="btn_pagar">Pagar</string>
    <string name="btn_anadirTicket">Añadir Ticket</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="lbl_texoCambieNombre">Cambie su nombre</string>
    <string name="lbl_perfil">Perfil</string>
    <string name="lbl_precioString">El precio de la entrada es de:</string>
</resources>