<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarUsuarios">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:text="@string/nombre"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="24sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:text="@string/contrase_a"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/passw"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:text="@string/dni"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/dni"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor,SpeakableTextPresentCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <Button
            android:id="@+id/registrarse"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:text="@string/finalizar" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>